--- a/index.html
+++ b/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+
+<head>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+  <meta http-equiv="Cache-Control" content="no-cache">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+  <title>Vite App</title>
+  <style>
+    html {
+      background-color: #F5F5FA;
+    }
+    
+    body {
+      width: 100%;
+      background-color: #F5F5FA;
+      font-family: 'Nanum Gothic', sans-serif;
+      -webkit-overflow-scrolling: auto;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      html {
+        background-color: #3F3F3F;
+        color: #F5F5FA;
+      }
+
+      div {
+        background-color: #3F3F3F;
+        color: #F5F5FA;
+      }
+
+      hr {
+        color: #F5F5FA !important;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
